Fixed the "invisibility bug" on mobile with #010F1B

--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ nav a, nav a:visited {
 }
 
 nav a.selected, nav a:hover {
-	color: #064379;
+	color: #010F1B;
 }
 /* site body */
 body {
